# vt-yubi

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  Vagrantfile  justfile  setup-pam.sh
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: pam-sudo-setup.md  yubikey-migration.md
src/: audit.rs  cli.rs  core.rs  main.rs  security.rs  serve.rs  ssh_agent.rs  ssh_cli.rs  yk_backend.rs
