[package]
name = "vt-yubi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vt-yubi"
path = "src/main.rs"

[features]
default = ["server"]
server = ["yubikey", "ssh-agent-lib/agent", "ssh-agent-lib/codec", "ssh-key", "p256/ecdh", "p384", "async-trait", "subtle", "zeroize", "spki", "axum", "toml"]

[dependencies]
clap = { version = "4.5.43", features = ["derive", "env"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aes-gcm = "0.10"
rand = "0.8"
atty = "0.2"
anyhow = "1.0.98"
base64 = "0.22.1"
sha2 = "0.10.9"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0.128"
totp-rs = "5.7.0"
rpassword = "7.4.0"
regex = "1.11.1"
exec = "0.3.1"
libc = "0.2.174"
hostname = "0.4.1"
chrono = "0.4"
dirs = "5"

# SSH agent client (blocking, for try_agent_extension in cli.rs)
ssh-agent-lib = { version = "0.5", default-features = false }

# Server-only dependencies (behind "server" feature)
yubikey = { version = "0.8", features = ["untested"], optional = true }
axum = { version = "0.8.4", optional = true }
toml = { version = "0.8", optional = true }
ssh-key = { version = "0.6", features = ["p256", "p384", "encryption", "crypto"], optional = true }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"], optional = true }
async-trait = { version = "0.1", optional = true }
subtle = { version = "2", optional = true }
zeroize = { version = "1", optional = true }
spki = { version = "0.7", optional = true }

[dev-dependencies]
tracing-test = "0.2.5"
